# DuckIndex

./: .gitignore  Makefile.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dirs.rs  indexer.rs  lib.rs  log.rs  main.rs  monitor.rs  ocr.rs  reader.rs  sqlite.rs  test.rs  utils.rs  worker.rs
src/components/: SearchView.vue  SettingsView.vue
test_data/: 1.txt  test.doc  test.pptx
test_data/reader/office/: test.docx  test.xlsx
test_data/reader/pic/: test.tif
