[package]
name = "deepindex"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deepindex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tantivy-jieba = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tantivy = "0.24"
once_cell = "1"
config = "0.15"
log = "0.4"
log4rs = { version = "1.3.0", features = ["gzip"] }
directories = "6.0.0"

tempfile = "3"
zip = "4.3.0"
quick-xml = "0.38.1"
lopdf = "0.36.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "8"
chrono = "0.4"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "2"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
strum = { version = "0.27", features = ["derive"] }
tauri-plugin-dialog = "2"

tesseract = "0.15"

[profile.dev] # 默认的 cargo build 使用这个配置
debug = true

[profile.release] # cargo build --release 使用这个配置
debug = true

[dev-dependencies]
tempfile = "3"
fs_extra = "1.3.0"
